adding ui project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-default">
+    <div class="container-flued">
+
+        <a href="" class="navbar-brand"> Praxim Learning </a>
+
+        <div class="col-sm-8 col-sm-offset-2">
+
+        </div>
+    </div>
+</nav>
+
+<div class="col-sm-8 col-sm-offset-2">
+    <alert></alert>
+    <router-outlet></router-outlet>
+</div>
