Adding project related component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
-<nav class="navbar navbar-default">
-    <div class="container-flued">
-
-        <a href="" class="navbar-brand"> Praxim Learning </a>
-
-        <div class="col-sm-8 col-sm-offset-2">
-
-        </div>
-    </div>
-</nav>
+<div class="container">
+  <app-header></app-header>
+</div>
 
 <div class="col-sm-8 col-sm-offset-2">
     <alert></alert>
