Added landing page layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="container">
-  <app-header></app-header>
-</div>
-
-<div class="col-sm-8 col-sm-offset-2">
-    <alert></alert>
-    <router-outlet></router-outlet>
-</div>
+<app-home></app-home>
