--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,37 @@
-<div class="masthead">
-    <h3 class="text-muted">Praxim Learning</h3>
 
-</div>
-<nav>
-    <ul class="nav nav-justified">
-        <li routerLinkActive="active"><a routerLink="#">Home</a></li>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Praxim Learning</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Profile</a></li>
+          </ul>
+         
+        </div>
+      </div>
+    </nav>
+<div class="container-fluid">
+      <div class="row">
+     <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+        <li routerLinkActive="active"><a routerLink="/home">Overview</a></li>
         <li routerLinkActive="active"><a routerLink="/projects">Projects</a></li>
         <li routerLinkActive="active"><a routerLink="/concepts">Concepts</a></li>
-        <li routerLinkActive="active"><a routerLink="/students">Students</a></li>
-    </ul>
-</nav>
+        <li routerLinkActive="active"><a routerLink="/students">Students</a></li>              
+           
+          </ul>
+    
+        </div>
+      </div>
+</div>
