--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,8 @@
-<div class="col-md-6 col-md-offset-3">
-    <h1>Hi {{currentUser.FirstName}}!</h1>
-    <p>You're logged into Praxis Learning !!</p>
-    <h3>Your registered projects </h3>
-    <ul>
-        <li *ngFor="let user of users">
-            {{user.username}} ({{user.firstName}} {{user.lastName}})
-            - <a (click)="deleteUser(user.id)">Delete</a>
-        </li>
-    </ul>   
-    <p><a [routerLink]="['/login']">Logout</a></p>
+<div class="container">
+  <app-header></app-header>
+</div>
+
+<div class="col-sm-8 col-sm-offset-2" style="padding-top: 60px;">
+    <alert></alert>
+    <router-outlet></router-outlet>
 </div>
