--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="col-md-6 col-md-offset-3">
-    <h2>Login</h2>
+    <h2>Please sign in</h2>
     <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
-            <label for="username">Email</label>
+            <label for="username">Email address</label>
             <input type="email" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel" required email="true"/>
             <div *ngIf="f.submitted && !username.valid" class="help-block">Valid Email is required</div>
         </div>
