--- a/src/app/projects/project-card/project-card.component.html
+++ b/src/app/projects/project-card/project-card.component.html
@@ -8,6 +8,6 @@
     <p class="card-text">
       {{ project.projectDescription}}
     </p>
-    <a href="#" class="btn btn-primary">Go to project home</a>
+    <a routerLink="{{project.projectId }}" class="btn btn-primary">Go to project home</a>
   </div>
 </div>
