--- a/src/app/projects/project-edit/project-edit.component.html
+++ b/src/app/projects/project-edit/project-edit.component.html
@@ -6,7 +6,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Project Title</label>
-            <input type="text" id="projectTitle" class="form-control" [(ngModel)]="model.projectTitle" #projectTitle="ngModel" required
+            <input type="text" name="projectTitle" class="form-control" [(ngModel)]="model.projectTitle" #projectTitle="ngModel" required
             />
             <div *ngIf="f.submitted && !projectTitle.valid" class="help-block">Project Title is required</div>
 
@@ -17,7 +17,24 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="description">Project Description</label>
-            <textarea type="text" id="projectDescription" class="form-control" [(ngModel)]="model.projectDescription" #projectDescription="ngModel" rows="6"></textarea>
+            <textarea type="text" name="projectDescription" class="form-control" [(ngModel)]="model.projectDescription" #projectDescription="ngModel" rows="6"></textarea>
+        </div>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Project Start Date</label>
+          <input [ngModel]="projectStartDate | date:'yyyy-MM-dd'" (ngModelChange)="projectStartDate = $event" type="date" name="projectStartDate"/>
+        </div>
+      </div>
+      </div>
+
+<div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Project End Date</label>
+          <input [ngModel]="projectEndDate | date:'yyyy-MM-dd'" (ngModelChange)="projectEndDate = $event" type="date" name="projectEndDate"/>
         </div>
       </div>
       </div>
