--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,37 +1,75 @@
-
-
 <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+        aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Praxim Learning</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
+      <a class="navbar-brand" href="#">Praxim Learning</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">About</a></li>
+
+        <li class="dropdown" appDropdown *ngIf="authenticationService.isAuthenticated()">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <span class="glyphicon glyphicon-user"></span>
+            <strong>{{ currentUser.FirstName }}</strong>
+            <span class="glyphicon glyphicon-chevron-down"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <div class="navbar-login">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <p class="text-center">
+                      <span class="glyphicon glyphicon-user icon-size"></span>
+                    </p>
+                  </div>
+                  <div class="col-lg-8">
+                    <p class="text-left"><strong>    {{ currentUser.FirstName }} {{ currentUser.LastName }}
+</strong></p>
+                    <p class="text-left small">{{ currentUser.UserName }}</p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="divider navbar-login-session-bg"></li>
+            <li><a href="#">Password change<span class="glyphicon glyphicon-cog pull-right"></span></a></li>
+            <li class="divider"></li>
+            <li><a href="#">Messages <span class="badge pull-right"> 42 </span></a></li>
+            <li class="divider"></li>
+
+            <li><a (click)="onLogout()" style="cursor:pointer">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
           </ul>
-         
-        </div>
-      </div>
-    </nav>
+        </li>
+        <li *ngIf="!authenticationService.isAuthenticated()">
+          <a href routerLink="/login">Log In
+            
+          </a>
+        </li>
+
+      </ul>
+
+    </div>
+  </div>
+</nav>
 <div class="container-fluid">
-      <div class="row">
-     <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-        <li routerLinkActive="active"><a routerLink="/home">Overview</a></li>
-        <li routerLinkActive="active"><a routerLink="/projects">Projects</a></li>
-        <li routerLinkActive="active"><a routerLink="/concepts">Concepts</a></li>
-        <li routerLinkActive="active"><a routerLink="/students">Students</a></li>              
-           
-          </ul>
-    
-        </div>
-      </div>
+  <div class="row">
+    <div class="col-sm-3 col-md-2 sidebar">
+      <ul class="nav nav-sidebar">
+        <ng-template [ngIf]="authenticationService.isAuthenticated()">
+
+          <li routerLinkActive="active"><a routerLink="/home">Overview</a></li>
+          <li routerLinkActive="active"><a routerLink="/projects">Projects</a></li>
+          <li routerLinkActive="active"><a routerLink="/concepts">Concepts</a></li>
+          <li routerLinkActive="active"><a routerLink="/students">Students</a></li>
+        </ng-template>
+      </ul>
+
+    </div>
+  </div>
 </div>
