--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -1,3 +1,6 @@
-<p>
-  concepts works!
-</p>
+<div class="container">
+  <app-header></app-header>
+</div>
+<div class="row" class="concepts">
+    <router-outlet></router-outlet>
+</div>
