--- a/src/app/projects/project-edit/project-edit.component.html
+++ b/src/app/projects/project-edit/project-edit.component.html
@@ -1,8 +1,13 @@
 <div class="row">
+
   <div class="col-xs-12">
     <form (ngSubmit)="onSubmit()" #f="ngForm">
 
       <div class="row">
+        <div class="col-xs-12">
+
+          <alert></alert>
+        </div>
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Project Title</label>
@@ -17,27 +22,31 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="description">Project Description</label>
-            <textarea type="text" name="projectDescription" class="form-control" [(ngModel)]="model.projectDescription" #projectDescription="ngModel" rows="6"></textarea>
+            <textarea type="text" name="projectDescription" class="form-control" [(ngModel)]="model.projectDescription" #projectDescription="ngModel"
+              rows="6"></textarea>
+          </div>
         </div>
-      </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="description">Project Start Date</label>
-          <input [ngModel]="projectStartDate | date:'yyyy-MM-dd'" (ngModelChange)="projectStartDate = $event" type="date" name="projectStartDate"/>
+            <label for="projectStartDate">Project start date</label>
+            <input type="date" name="projectStartDate" [(ngModel)]="model.projectStartDate " (ngModelChange)="model.projectStartDate = $event"
+              #projectStartDate="ngModel" />
+          </div>
         </div>
-      </div>
       </div>
 
-<div class="row">
+      <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="description">Project End Date</label>
-          <input [ngModel]="projectEndDate | date:'yyyy-MM-dd'" (ngModelChange)="projectEndDate = $event" type="date" name="projectEndDate"/>
+            <label for="projectEndDate">Project end date</label>
+            <input type="date" name="projectEndDate" [(ngModel)]="model.projectEndDate " (ngModelChange)="model.projectEndDate = $event"
+              #projectEndDate="ngModel" />
+          </div>
         </div>
       </div>
-      </div>
+
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success" [disabled]="!f.valid">Save</button>
