--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -2,5 +2,6 @@
   <app-header></app-header>
 </div>
 <div class="row" class="concepts">
-    <router-outlet></router-outlet>
+  <a routerLink='/concepts/new' class="btn btn-success" style="margin-bottom:10px;" >Create New Concept</a>
+  <router-outlet></router-outlet>
 </div>
