--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-header></app-header>
 </div>
-<div class="row" style="padding-left: 250px;padding-top: 60px;padding-top: 60px;">
+<div class="row">
   <div class="col-md-12">
     <a routerLink='/projects/new' class="btn btn-success">Create New Project</a>
     <router-outlet></router-outlet>
