--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<div class="container">
+  <app-header></app-header>
+</div>
+<div class="col-sm-8 col-sm-offset-2" style="padding-top: 60px;">
+
 <router-outlet></router-outlet>
+</div>
