--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,11 +8,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-      <a class="navbar-brand" href="#">Praxim Learning</a>
+      <a class="navbar-brand navbar-center" href="#">PRAXIM LEARNING</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">About</a></li>
+        <li><a href="#">ABOUT</a></li>
 
         <li class="dropdown" appDropdown *ngIf="authenticationService.isAuthenticated()">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -59,17 +59,21 @@
 </nav>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-3 col-md-2 sidebar">
-      <ul class="nav nav-sidebar">
-        <ng-template [ngIf]="authenticationService.isAuthenticated()">
+    <ng-template [ngIf]="authenticationService.isAuthenticated()">
+
+      <div class="col-sm-3 col-md-2 sidebar">
+
+        <ul class="nav nav-sidebar">
 
           <li routerLinkActive="active"><a routerLink="/home">Overview</a></li>
           <li routerLinkActive="active"><a routerLink="/projects">Projects</a></li>
           <li routerLinkActive="active"><a routerLink="/concepts">Concepts</a></li>
           <li routerLinkActive="active"><a routerLink="/students">Students</a></li>
-        </ng-template>
-      </ul>
+        </ul>
 
-    </div>
+
+      </div>
+    </ng-template>
+
   </div>
 </div>
