--- a/src/app/projects/project-edit/project-edit.component.html
+++ b/src/app/projects/project-edit/project-edit.component.html
@@ -32,8 +32,10 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="startDate">Project start date</label>
-            <input type="date" name="startDate" [(ngModel)]="model.startDate " (ngModelChange)="model.startDate = $event" #startDate="ngModel"
-            />
+            <p-calendar name="startDate" [(ngModel)]="model.startDate " (ngModelChange)="model.startDate = $event" #startDate="ngModel"
+              [showIcon]="true"></p-calendar>
+
+
           </div>
         </div>
       </div>
@@ -42,8 +44,8 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="endDate">Project end date</label>
-            <input type="date" name="endDate" [(ngModel)]="model.endDate " (ngModelChange)="model.endDate = $event" #endDate="ngModel"
-            />
+            <p-calendar name="endDate" [(ngModel)]="model.endDate " (ngModelChange)="model.endDate = $event" #endDate="ngModel" [showIcon]="true"></p-calendar>
+
           </div>
         </div>
       </div>
