--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,7 @@
+
 <div class="col-md-6 col-md-offset-3">
+    <p-growl [value]="msgs" sticky="sticky"></p-growl>
+
     <h2>Register</h2>
     <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
