--- a/src/app/concepts/concept-listing/concept-listing.component.html
+++ b/src/app/concepts/concept-listing/concept-listing.component.html
@@ -1,20 +1,23 @@
 <div class="container">
 
   <div class="row">
-      <div class="panel with-nav-tabs panel-info">
-        <div class="panel-heading">
-          <ul class="nav nav-tabs">
-            <li routerLinkActive="active"><a routerLink="/concepts/my" data-toggle="tab">My Registered concepts</a></li>
-            <li routerLinkActive="active"><a routerLink="/concepts/available" data-toggle="tab">Available concepts</a></li>
-            <li routerLinkActive="active"><a routerLink="/concepts/expired" data-toggle="tab">Closed concepts</a></li>
-          </ul>
-        </div>
-        <div class="panel-body">
-          <div class="tab-content">
-            <div class="tab-pane fade in active" id="tab1success">Success 1</div>
-            <div class="tab-pane fade" id="tab2success">Success 2</div>
-            <div class="tab-pane fade" id="tab2success">Success 3</div>
+    <div class="panel with-nav-tabs panel-info">
+      <div class="panel-heading">
+        <ul class="nav nav-tabs">
+          <li routerLinkActive="active"><a routerLink="/concepts/my" data-toggle="tab">My Registered concepts</a></li>
+          <li routerLinkActive="active"><a routerLink="/concepts/available" (click)="loadConcepts($event)" data-toggle="tab">Available concepts</a></li>
+          <li routerLinkActive="active"><a routerLink="/concepts/open" data-toggle="tab">Open concepts</a></li>
+          <li routerLinkActive="active"><a routerLink="/concepts/expired" data-toggle="tab">Closed concepts</a></li>
+        </ul>
+      </div>
+      <div class="panel-body">
+        <div class="tab-content">
+          <alert></alert>
+
+          <div *ngFor="let concept of concepts ">
+            <app-concept-card [concept]="concept"></app-concept-card>
           </div>
+        </div>
       </div>
     </div>
   </div>
