--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -3,5 +3,6 @@
 </div>
 <div class="row" class="concepts">
   <a routerLink='/concepts/new' class="btn btn-success" style="margin-bottom:10px;" >Create New Concept</a>
+  <p-confirmDialog></p-confirmDialog>
   <router-outlet></router-outlet>
 </div>
