--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
         <li class="dropdown" appDropdown *ngIf="authenticationService.isAuthenticated()">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <span class="glyphicon glyphicon-user"></span>
-            <strong>{{ currentUser.FirstName }}</strong>
+            <strong>{{ model.FirstName }}</strong>
             <span class="glyphicon glyphicon-chevron-down"></span>
           </a>
           <ul class="dropdown-menu">
@@ -30,9 +30,9 @@
                     </p>
                   </div>
                   <div class="col-lg-8">
-                    <p class="text-left"><strong>    {{ currentUser.FirstName }} {{ currentUser.LastName }}
+                    <p class="text-left"><strong>    {{ model.FirstName }} {{ model.LastName }}
 </strong></p>
-                    <p class="text-left small">{{ currentUser.UserName }}</p>
+                    <p class="text-left small">{{ model.UserName }}</p>
                   </div>
                 </div>
               </div>
