--- a/src/app/projects/project-card/project-card.component.html
+++ b/src/app/projects/project-card/project-card.component.html
@@ -1,18 +1,21 @@
-<p-panel>
-  <p-header>
-    <div class="ui-helper-clearfix">
-      <span class="ui-panel-title" style="font-size:16px;display:inline-block;margin-top:5px;">{{ project.ProjectTitle }}</span>
+<div style="margin-top:10px;">
+  <p-panel>
+    <p-header>
+      <div class="ui-helper-clearfix">
+        <span class="ui-panel-title" style="font-size:16px;display:inline-block;margin-top:5px;">{{ project.ProjectTitle }}</span>
+        <span class="ui-panel-title pull-right"> {{ project.ProjectStartDate | date }} to {{ project.ProjectEndDate | date }}</span>
 
+      </div>
+    </p-header>
+    <div>
+      The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding. His beloved
+      son Michael has just come home from the war, but does not intend to become part of his father's business. Through Michael's
+      life the nature of the family business becomes clear. The business of the family is just like the head of the family,
+      kind and benevolent to those who give respect, but given to ruthless violence whenever anythi {{ project.ProjectDescription}}
     </div>
-  </p-header>
-  The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding. His beloved
-  son Michael has just come home from the war, but does not intend to become part of his father's business. Through Michael's
-  life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind
-  and benevolent to those who give respect, but given to ruthless violence whenever anythi {{ project.ProjectDescription}}
-  <p-footer>
-    <a routerLink='/projects/{{project.ProjectId}}' icon="fa-list" class="ui-button-success">Go to project home</a>
-    <button pButton type="button" icon="fa-list" label="View" class="ui-button-success"></button>
+    <div style="margin-top:10px;">
+      <a pButton type="button" label="Go to project home" routerLink='/projects/{{project.ProjectId}}' class="ui-button-info"></a>
+    </div>
 
-  </p-footer>
-</p-panel>
-
+  </p-panel>
+</div>
