added student cohort

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -67,7 +67,7 @@
 
           <li routerLinkActive="active"><a routerLink="/home">Overview</a></li>
           <li routerLinkActive="active"><a routerLink="/projects">Projects</a></li>
-          <li routerLinkActive="active"><a routerLink="/concepts">Concepts</a></li>
+          <li routerLinkActive="active"><a routerLink="/concepts/my">Concepts</a></li>
           <li routerLinkActive="active"><a routerLink="/students">Students</a></li>
         </ul>
 
