--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,3 +1,9 @@
-<p>
-  students works!
-</p>
+<div class="container">
+  <app-header></app-header>
+</div>
+<div class="row">
+  <div class="col-md-12">
+
+    <router-outlet></router-outlet>
+  </div>
+</div>
