--- a/src/app/projects/project-home/project-home.component.html
+++ b/src/app/projects/project-home/project-home.component.html
@@ -1,3 +1,47 @@
-<p>
-  project-home works!
-</p>
+<div class="panel panel-primary" style="margin-top:10px">
+
+  <div class="panel-heading">Project Title</div>
+
+
+</div>
+
+<div class="panel-body">
+
+  <div class="steps-custom ui-steps ui-widget ui-helper-clearfix ui-steps-readonly">
+    <ul role="tablist">
+      <!---->
+      <li class="ui-steps-item ui-state-highlight">
+        <!---->
+        <a class="ui-menuitem-link" href="#">
+          <span class="ui-steps-number">1</span>
+          <span class="ui-steps-title">Created</span>
+        </a>
+        <!---->
+      </li>
+      <li class="ui-steps-item ui-state-highlight">
+        <!---->
+        <a class="ui-menuitem-link" href="#">
+          <span class="ui-steps-number">2</span>
+          <span class="ui-steps-title">In Progress</span>
+        </a>
+        <!---->
+      </li>
+      <li class="ui-steps-item ui-state-default ui-state-disabled">
+        <!---->
+        <a class="ui-menuitem-link" href="#">
+          <span class="ui-steps-number">3</span>
+          <span class="ui-steps-title">Review</span>
+        </a>
+        <!---->
+      </li>
+      <li class="ui-steps-item ui-state-default ui-state-disabled">
+        <!---->
+        <a class="ui-menuitem-link" href="#">
+          <span class="ui-steps-number">4</span>
+          <span class="ui-steps-title">Submitted</span>
+        </a>
+        <!---->
+      </li>
+    </ul>
+  </div>
+</div>
