--- a/src/app/projects/project-edit/project-edit.component.html
+++ b/src/app/projects/project-edit/project-edit.component.html
@@ -53,18 +53,24 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="students">Select students</label>
-
-            <p-autoComplete name="students" #students="ngModel"  [(ngModel)]="model.students" [suggestions]="filteredStudentsMultiple" (completeMethod)="filterStudentMultiple($event)"
-              styleClass="wid100" [minLength]="1" placeholder="Students" field="name" [multiple]="true">
+            <label style="float:left;" for="students">Select students</label>
+            
+            <p-autoComplete  name="students" #students="ngModel"   [(ngModel)]="model.students" 
+            [suggestions]="filteredStudentsMultiple" (completeMethod)="filterStudentMultiple($event)"
+             [minLength]="1" placeholder="Start typing student names " field="FirstName" [multiple]="true">
             </p-autoComplete>
-            <ul>
-              <li *ngFor="let student of model.students">{{student.firstName}},{{student.lastName}}</li>
-            </ul>
+           
           </div>
         </div>
       </div>
-
+     <div class="row">
+        <div class="col-xs-12">
+          <div class="col-md-4"></div>
+           <ul class="col-md-8">
+              <li *ngFor="let student of model.students">{{student.FirstName}},{{student.LastName}}</li>
+            </ul>
+        </div>
+      </div>
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success" [disabled]="!f.valid">Save</button>
