Added nav changes, concept home page

--- a/src/app/concepts/concept-card/concept-card.component.html
+++ b/src/app/concepts/concept-card/concept-card.component.html
@@ -11,7 +11,8 @@
 
     </div>
     <div style="margin-top:10px;">
-      <a pButton type="button" label="Register" (click)="RegisterToConcept(concept.ConceptId)" class="ui-button-primary"></a>
+
+      <a pButton type="button" label="Register" (click)="RegisterToConcept(concept)" class="ui-button-primary" *ngIf="loggedInUser.isTeacher()"></a>
       <a pButton type="button" label="Go to concept home" routerLink='/concepts/{{concept.ConceptId}}' class="ui-button-info"></a>
     </div>
 
