--- a/src/app/projects/project-edit/project-edit.component.html
+++ b/src/app/projects/project-edit/project-edit.component.html
@@ -50,18 +50,14 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-xs-12">
           <div class="form-group">
             <label style="float:left;" for="students">Select students</label>
-            
-            <p-autoComplete  name="students" #students="ngModel"   [(ngModel)]="model.students" 
+            <div>
+            <p-autoComplete [size]="200" name="students" #students="ngModel"   [(ngModel)]="model.students" 
             [suggestions]="filteredStudentsMultiple" (completeMethod)="filterStudentMultiple($event)"
-             [minLength]="1" placeholder="Start typing student names " field="FirstName" [multiple]="true">
+             [minLength]="1"  placeholder="Start typing student names " field="FirstName" [multiple]="true">
             </p-autoComplete>
-           
-          </div>
-        </div>
+            </div>
       </div>
      <div class="row">
         <div class="col-xs-12">
